@@ -1,1 +1,2 @@
 from .ImageGroupReader import ImageGroupReader
+from .maps import *
