@@ -3,3 +3,5 @@ Oct 14, 2022
 2. default output directory now has a meaningful structure with patch sizes and step sizes
 3. Refactored ImageGroupReader
 4. generate_patches normalizes the reader data once.
+5. window_size -> patch_size
+6. step_size -> stride
